Updated workflow and removed action.yml

--- a/.github/workflows/ARIAC_docs.yaml
+++ b/.github/workflows/ARIAC_docs.yaml
@@ -12,5 +12,5 @@ jobs:
           formats: ''
           pip-requirements: requirements.txt
           build-html-command: make html
-          include-header-footer: false
+          insert-header-footer: false
           
