--- a/.github/workflows/ARIAC_docs.yaml
+++ b/.github/workflows/ARIAC_docs.yaml
@@ -9,11 +9,12 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-      - uses: usnistgov/Docs4NIST@0.7
+      - uses: usnistgov/Docs4NIST@0.8
         with:
           docs-folder: docs/
           formats: ''
           pip-requirements: requirements.txt
           build-html-command: make html
           insert-header-footer: true
+          hidden: true
           
