Added demos and cleaned up startup

--- a/.github/workflows/ARIAC_docs.yaml
+++ b/.github/workflows/ARIAC_docs.yaml
@@ -16,5 +16,5 @@ jobs:
           pip-requirements: requirements.txt
           build-html-command: make html
           insert-header-footer: true
-          hidden: true
+          hidden: false
           
